exercises/exercise1
irb(main):001:0> reload!
Reloading...
=> true
irb(main):002:0> b=Beer.first
  Beer Load (4.5ms)  SELECT "beers".* FROM "beers" ORDER BY "beers"."id" ASC LIMIT 1
=> #<Beer id: 1, name: "Iso 3", style: "Lager", brewery_id: 1, created_at: "2015-01-18 15:26:50", updated_at: "2015-01-18 15:26:50">
irb(main):003:0> b.ratings.create score:10
/home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/activerecord-4.0.2/lib/active_record/associations/has_many_association.rb:76: warning: circular argument reference - reflection
/home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/activerecord-4.0.2/lib/active_record/associations/has_many_association.rb:80: warning: circular argument reference - reflection
/home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/activerecord-4.0.2/lib/active_record/associations/has_many_association.rb:84: warning: circular argument reference - reflection
/home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/activerecord-4.0.2/lib/active_record/associations/has_many_association.rb:103: warning: circular argument reference - reflection
   (0.1ms)  begin transaction
  SQL (4.7ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 1], ["created_at", Sun, 25 Jan 2015 14:50:00 UTC +00:00], ["score", 10], ["updated_at", Sun, 25 Jan 2015 14:50:00 UTC +00:00]]
   (16.1ms)  commit transaction
=> #<Rating id: 1, score: 10, beer_id: 1, created_at: "2015-01-25 14:50:00", updated_at: "2015-01-25 14:50:00">
irb(main):004:0> b.ratings.create score:21
   (0.2ms)  begin transaction
  SQL (0.8ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 1], ["created_at", Sun, 25 Jan 2015 14:50:08 UTC +00:00], ["score", 21], ["updated_at", Sun, 25 Jan 2015 14:50:08 UTC +00:00]]
   (13.6ms)  commit transaction
=> #<Rating id: 2, score: 21, beer_id: 1, created_at: "2015-01-25 14:50:08", updated_at: "2015-01-25 14:50:08">
irb(main):005:0> b.ratings.create score:17
   (0.2ms)  begin transaction
  SQL (1.4ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 1], ["created_at", Sun, 25 Jan 2015 14:50:15 UTC +00:00], ["score", 17], ["updated_at", Sun, 25 Jan 2015 14:50:15 UTC +00:00]]
   (18.0ms)  commit transaction
=> #<Rating id: 3, score: 17, beer_id: 1, created_at: "2015-01-25 14:50:15", updated_at: "2015-01-25 14:50:15">
irb(main):006:0> bd = Brewery.create name:"BrewDog", year:2007
   (0.1ms)  begin transaction
  SQL (2.0ms)  INSERT INTO "breweries" ("created_at", "name", "updated_at", "year") VALUES (?, ?, ?, ?)  [["created_at", Sun, 25 Jan 2015 14:53:37 UTC +00:00], ["name", "BrewDog"], ["updated_at", Sun, 25 Jan 2015 14:53:37 UTC +00:00], ["year", 2007]]
   (23.2ms)  commit transaction
=> #<Brewery id: 14, name: "BrewDog", year: 2007, created_at: "2015-01-25 14:53:37", updated_at: "2015-01-25 14:53:37">
irb(main):007:0> bd.beers.create name:"Punk IPA", style "IPA"
SyntaxError: (irb):7: syntax error, unexpected tSTRING_BEG, expecting keyword_do or '{' or '('
bd.beers.create name:"Punk IPA", style "IPA"
                                        ^
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):008:0> bd.beers.create name:"Punk IPA", style:"IPA"
   (0.2ms)  begin transaction
  SQL (2.3ms)  INSERT INTO "beers" ("brewery_id", "created_at", "name", "style", "updated_at") VALUES (?, ?, ?, ?, ?)  [["brewery_id", 14], ["created_at", Sun, 25 Jan 2015 14:54:58 UTC +00:00], ["name", "Punk IPA"], ["style", "IPA"], ["updated_at", Sun, 25 Jan 2015 14:54:58 UTC +00:00]]
   (16.9ms)  commit transaction
=> #<Beer id: 30, name: "Punk IPA", style: "IPA", brewery_id: 14, created_at: "2015-01-25 14:54:58", updated_at: "2015-01-25 14:54:58">
irb(main):009:0> bd.beers.create name:"Nanny State", style:"lowalcohol"
   (0.2ms)  begin transaction
  SQL (1.6ms)  INSERT INTO "beers" ("brewery_id", "created_at", "name", "style", "updated_at") VALUES (?, ?, ?, ?, ?)  [["brewery_id", 14], ["created_at", Sun, 25 Jan 2015 14:55:30 UTC +00:00], ["name", "Nanny State"], ["style", "lowalcohol"], ["updated_at", Sun, 25 Jan 2015 14:55:30 UTC +00:00]]
   (20.0ms)  commit transaction
=> #<Beer id: 31, name: "Nanny State", style: "lowalcohol", brewery_id: 14, created_at: "2015-01-25 14:55:30", updated_at: "2015-01-25 14:55:30">
irb(main):010:0> b= Beer find 30
NoMethodError: undefined method `find' for main:Object
	from (irb):10
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):011:0> b= Beer.find 30
  Beer Load (0.5ms)  SELECT "beers".* FROM "beers" WHERE "beers"."id" = ? LIMIT 1  [["id", 30]]
=> #<Beer id: 30, name: "Punk IPA", style: "IPA", brewery_id: 14, created_at: "2015-01-25 14:54:58", updated_at: "2015-01-25 14:54:58">
irb(main):012:0> b.ratings.create score:23
   (0.2ms)  begin transaction
  SQL (0.9ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 30], ["created_at", Sun, 25 Jan 2015 14:57:57 UTC +00:00], ["score", 23], ["updated_at", Sun, 25 Jan 2015 14:57:57 UTC +00:00]]
   (18.9ms)  commit transaction
=> #<Rating id: 4, score: 23, beer_id: 30, created_at: "2015-01-25 14:57:57", updated_at: "2015-01-25 14:57:57">
irb(main):013:0> b.ratings.create score:40
   (0.1ms)  begin transaction
  SQL (0.4ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 30], ["created_at", Sun, 25 Jan 2015 14:58:05 UTC +00:00], ["score", 40], ["updated_at", Sun, 25 Jan 2015 14:58:05 UTC +00:00]]
   (11.5ms)  commit transaction
=> #<Rating id: 5, score: 40, beer_id: 30, created_at: "2015-01-25 14:58:05", updated_at: "2015-01-25 14:58:05">
irb(main):014:0> b= Beer.find 31
  Beer Load (0.3ms)  SELECT "beers".* FROM "beers" WHERE "beers"."id" = ? LIMIT 1  [["id", 31]]
=> #<Beer id: 31, name: "Nanny State", style: "lowalcohol", brewery_id: 14, created_at: "2015-01-25 14:55:30", updated_at: "2015-01-25 14:55:30">
irb(main):015:0> b.ratings.create score:60
   (0.6ms)  begin transaction
  SQL (1.3ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 31], ["created_at", Sun, 25 Jan 2015 14:58:17 UTC +00:00], ["score", 60], ["updated_at", Sun, 25 Jan 2015 14:58:17 UTC +00:00]]
   (23.1ms)  commit transaction
=> #<Rating id: 6, score: 60, beer_id: 31, created_at: "2015-01-25 14:58:17", updated_at: "2015-01-25 14:58:17">
irb(main):016:0> r=_
=> #<Rating id: 6, score: 60, beer_id: 31, created_at: "2015-01-25 14:58:17", updated_at: "2015-01-25 14:58:17">
irb(main):017:0> r score:30
SyntaxError: (irb):17: syntax error, unexpected ':', expecting end-of-input
r score:30
        ^
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):018:0> r score=30
NoMethodError: undefined method `r' for main:Object
	from (irb):18
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):019:0> r.score=30
=> 30
irb(main):020:0> b=Beer.find 31
  Beer Load (0.5ms)  SELECT "beers".* FROM "beers" WHERE "beers"."id" = ? LIMIT 1  [["id", 31]]
=> #<Beer id: 31, name: "Nanny State", style: "lowalcohol", brewery_id: 14, created_at: "2015-01-25 14:55:30", updated_at: "2015-01-25 14:55:30">
irb(main):021:0> 
